Fix inline outer spacing of search bar results

--- a/src/components/styles/SearchBar.scss
+++ b/src/components/styles/SearchBar.scss
@@ -46,5 +46,10 @@
     .results {
       border-radius: 8px;
     }
+
+    .bg-blur {
+      width: 100%;
+      left: 0;
+    }
   }
 }
